--- a/DiceDetectorMobileApp/app/src/main/res/layout/view_cam.xml
+++ b/DiceDetectorMobileApp/app/src/main/res/layout/view_cam.xml
@@ -2,9 +2,11 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:opencv="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
-    
+    <org.opencv.android.JavaCameraView
+        android:layout_width="match_parent"
+        android:layout_height="matchParent"
+        android:id="@+id/cameraView"/>
 
 </LinearLayout>
