--- a/DiceDetectorMobileApp/app/src/main/res/layout/view_cam.xml
+++ b/DiceDetectorMobileApp/app/src/main/res/layout/view_cam.xml
@@ -45,7 +45,6 @@
                     android:layout_width="50dp"
                     android:layout_height="match_parent"
                     android:id="@+id/diceCountTextView"
-                    android:text="ten"
                     android:textSize="16sp"
                     android:textColor="@color/black"
                     android:fontFamily="sans-serif"
@@ -230,6 +229,68 @@
                 </LinearLayout>
 
             </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:id="@+id/sumContainer">
+
+                    <com.google.android.material.textview.MaterialTextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/sum_of_dice"
+                        android:textSize="16sp"
+                        android:textColor="@color/black"
+                        android:fontFamily="sans-serif"
+                        android:padding="8sp"/>
+
+                    <com.google.android.material.textview.MaterialTextView
+                        android:layout_width="62dp"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/sumTextView"
+                        android:textSize="16sp"
+                        android:textColor="@color/black"
+                        android:fontFamily="sans-serif"
+                        android:padding="8sp"/>
+
+                </LinearLayout>
+
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:id="@+id/averageSumContainer">
+
+                    <com.google.android.material.textview.MaterialTextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/average_sum"
+                        android:textSize="16sp"
+                        android:textColor="@color/black"
+                        android:fontFamily="sans-serif"
+                        android:padding="8sp"/>
+
+                    <com.google.android.material.textview.MaterialTextView
+                        android:layout_width="50dp"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/averageSumTextView"
+                        android:textSize="16sp"
+                        android:textColor="@color/black"
+                        android:fontFamily="sans-serif"
+                        android:padding="8sp"/>
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+
 
         </LinearLayout>
 
