--- a/DiceDetectorMobileApp/app/src/main/res/layout/view_cam.xml
+++ b/DiceDetectorMobileApp/app/src/main/res/layout/view_cam.xml
@@ -7,9 +7,10 @@
 
     <org.opencv.android.JavaCameraView
         android:layout_width="match_parent"
-        android:layout_height="500dp"
+        android:layout_height="450dp"
         android:id="@+id/cameraView"
         app:show_fps="true"
+        app:camera_id="back"
         android:layout_gravity="center"
         android:layout_margin="5dp"/>
 
